register movie acitivity views initialized

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">THEATERBUZZ</string>
+    <string name="register_movie">Register Movie</string>
 </resources>
