--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">THEATERBUZZ</string>
     <string name="register_movie">Register Movie</string>
+    <string name="display_movie">Display Movie</string>
+    <string name="favourite_movies">Favourite Movies</string>
 </resources>
