--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="register_movie">Register Movie</string>
     <string name="display_movie">Display Movie</string>
     <string name="favourite_movies">Favourite Movies</string>
+    <string name="edit_movies">Edit Movies</string>
 </resources>
