--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="display_movie">Display Movie</string>
     <string name="favourite_movies">Favourite Movies</string>
     <string name="edit_movies">Edit Movies</string>
+    <string name="search_movies">Search Movies</string>
 </resources>
