--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="favourite_movies">Favourite Movies</string>
     <string name="edit_movies">Edit Movies</string>
     <string name="search_movies">Search Movies</string>
+    <string name="movie_ratings">Movie Ratings</string>
 </resources>
